# VolumeFog

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  imgui.ini
assets/glsl/: Accumulate.comp  CalcFroxel.comp  CalcLightCull.comp  ClipMap.comp  FillVolumeMedia.comp  GBuffer.frag  GBuffer.vert  MultiScattering.comp  PostProcess.frag  Quad.vert  ShadowMap.vert  SkyLUT.comp  SkyLUT.frag  SkyView.frag  TAA.comp  Terrain.frag  Terrain.vert  Transmittance.comp  WireFrame.frag  WireFrame.vert
docs/logs/: DEV.MD
docs/logs/2022.10.4/: LOG.MD
docs/logs/2022.9.22/: LOG.MD
docs/logs/2022.9.23/: LOG.MD
docs/logs/2022.9.24-26/: LOG.MD
src/: common.hpp  main.cpp
